# uc-calculator

./: .flake8  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: universal_credit_notes.md
src/uc_calculator/: __init__.py  clean.py  uc_funcs.py
tests/: test_uc_funcs.py
