[tool.poetry]
name = "uc-calculator"
version = "0.1.0"
description = "Dashboard to calculate the impact of alternative universal credit reforms"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dgoll/uc-calculator"
repository = "https://github.com/dgoll/uc-calculator"
authors = ["David Goll <david@goll.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.3"
plotly = "^5.9.0"
dash = "^2.5.1"
pyreadstat = "^1.1.7"
matplotlib = "^3.5.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.4"
ipykernel = "^6.15.0"
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.1"}
pytest-cov = "^3.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["uc_calculator"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
